--- a/_config.yml
+++ b/_config.yml
@@ -107,15 +107,15 @@ analytics:
 
 # Site Author
 author:
-  name             : "Your Name"
+  name             : "Kuan-Hung (Peter) Yeh"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "I am an **amazing** person."
-  location         : "Somewhere"
+  bio              : "I am an Active Learner, Storyteller and also Dream Chaser."
+  location         : "Taipei, Taiwan"
   email            :
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
-      # url: mailto:your.name@email.com
+      url: mailto:b05801047@ntu.edu.tw
     - label: "Website"
       icon: "fas fa-fw fa-link"
       # url: "https://your-website.com"
