--- a/_config.yml
+++ b/_config.yml
@@ -118,13 +118,10 @@ author:
       url: mailto:b05801047@ntu.edu.tw
     - label: "Website"
       icon: "fas fa-fw fa-link"
-      # url: "https://your-website.com"
-    - label: "Twitter"
-      icon: "fab fa-fw fa-twitter-square"
-      # url: "https://twitter.com/"
+      url: "https://peterntuph.github.io/homepage/"
     - label: "Facebook"
       icon: "fab fa-fw fa-facebook-square"
-      # url: "https://facebook.com/"
+      url: "https://www.facebook.com/peter.ya.180"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       # url: "https://github.com/"
