--- a/_config.yml
+++ b/_config.yml
@@ -109,7 +109,7 @@ analytics:
 author:
   name             : "Kuan-Hung (Peter) Yeh"
   avatar           : "bio.jpg"# path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "I am an Active Learner, Storyteller and also Dream Chaser."
+  bio              : "An undergraduate student in Public Health at National Taiwan University"
   location         : "Taipei, Taiwan"
   email            :
   links:
