--- a/_config.yml
+++ b/_config.yml
@@ -280,7 +280,7 @@ compress_html:
 defaults:
   # _posts
   - scope:
-      path: "/_post/"
+      path: ""
       type: posts
     values:
       layout: single
