--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "Kuan-Hung (Peter) Yeh"
 description              : "An undergraduate student in Public Health at National Taiwan University"
-url                      : "https://peterntuph.github.io/"# the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : "https://peterntuph.github.io"# the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "/homepage"# the subpath of your site, e.g. "/blog"
 repository               : "peterntuph/homepage"# GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
