--- a/_config.yml
+++ b/_config.yml
@@ -118,13 +118,13 @@ author:
       url: mailto:b05801047@ntu.edu.tw
     - label: "Website"
       icon: "fas fa-fw fa-link"
-      url: "https://peterntuph.github.io/homepage/"
+      url: "https://peterntuph.github.io/"
     - label: "Facebook"
       icon: "fab fa-fw fa-facebook-square"
       url: "https://www.facebook.com/peter.ya.180"
     - label: "CV"
       icon: "fas fa-fw fa-id-card"
-      url: "https://peterntuph.github.io/homepage/CV.pdf"
+      url: "https://peterntuph.github.io/CV.pdf"
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
       # url: "https://instagram.com/"
