--- a/_config.yml
+++ b/_config.yml
@@ -103,7 +103,7 @@ analytics:
   google:
     tracking_id          : "UA-160375919-1"
     anonymize_ip         : # true, false (default)
-
+google_analytics: "UA-160375919-1"
 
 # Site Author
 author:
