--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,6 +6,9 @@ main:
     url: /about/
   - title: "Publications"
     url: /Publications/
+  - title: "Splash Page"
+    url: /splash-page/
+    
   # - title: "Sample Collections"
   #   url: /collection-archive/
   # - title: "Sitemap"
