--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,8 +4,8 @@ main:
   #  url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
   - title: "About"
     url: /about/
-  - title: "Publications"
-    url: /Publications/
+  #- title: "Publications"
+    #url: /Publications/
   - title: "Splash Page"
     url: /splash-page/
     
