--- a/_config.yml
+++ b/_config.yml
@@ -124,7 +124,7 @@ author:
       url: "https://www.facebook.com/peter.ya.180"
     - label: "CV"
       icon: "fas fa-fw fa-id-card"
-      url: "https://peterntuph.github.io/CV.pdf"
+      url: "https://peterntuph.github.io/home/CV.pdf"
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
       # url: "https://instagram.com/"
