--- a/_config.yml
+++ b/_config.yml
@@ -21,8 +21,8 @@ title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "Kuan-Hung (Peter) Yeh"
 description              : "A graduate from Dept. of Public Health at National Taiwan University"
-url                      : "https://peterntuph.github.io/home"# the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
-baseurl                  : ""# the subpath of your site, e.g. "/blog"
+url                      : "https://peterntuph.github.io/home" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+baseurl                  : "https://peterntuph.github.io/home"# the subpath of your site, e.g. "/blog"
 repository               : "peterntuph/home"# GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo                     : # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
