--- a/_config.yml
+++ b/_config.yml
@@ -101,7 +101,7 @@ social:
 analytics:
   provider               : "google" # false (default), "google", "google-universal", "custom"
   google:
-    tracking_id          : "UA-160375919-1"
+    tracking_id          : 
     anonymize_ip         : # true, false (default)
 google_analytics: "UA-160375919-1"
 
