--- a/_config.yml
+++ b/_config.yml
@@ -115,7 +115,7 @@ author:
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
-      url: mailto:b05801047@ntu.edu.tw
+      url: mailto:khyeh0816@g.ucla.edu
     - label: "Website"
       icon: "fas fa-fw fa-link"
       url: "https://peterntuph.github.io/"
